# DigitalClockPlus

./: .gitignore  CMakeLists.txt  DateTimeFormatter.qml  DigitalClock.qml  README.md  TimeFormat.qml  configAppearance.qml  main.qml  main.xml
package/: metadata.json
